--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
 .App {
+  background: #115400;
+  min-height: 614px;
+  min-width: 375px;
+}
+
+.container{
+  height: auto;
+  min-width: 889px;
+  width: 65%;
+  background-color: #187A00;
+  margin: 0 auto;
+  padding: 5px;
+}
+
+.loginBox{
+  width: 500px;
+  height: 200px;
   text-align: center;
+  margin: 0 auto;
+  margin-top: 20%;
+  background: #5DE483;
+  box-shadow: 0px 4px 12px 9px rgba(0, 0, 0, 0.4);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.descriptionContainer{
+  margin: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.description{
+  color: white;
+  margin: auto;
+  padding: 10px;
+  text-decoration: none;
+  font-family: 'Helvetica', sans-serif ;
+  font-size: 16px;
+}
+
+.imgPost {
+  border-radius: 25px;
+  max-width:600px;
+  min-width:600px;
+  max-height:400px;
+  min-height:300px;
+}
+
+h3 {
+  margin: 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.post{
+  display: flex;
+  border-bottom: #115400 solid 1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.post:hover{
+  background-color: #1e9400;
 }
+
+.informationContainer{
+  margin: auto;
+  margin-bottom: 10px;
+  width: 800px;
+}
+
+.description:link{
+  text-decoration: none;
+}
+
+.imgContainer{
+  width: 100%;
+  min-width: 650px;
+  height: 450px;
+  display: flex;
+  right: 250px;
+  background-color: #115400;
+  align-items: center;
+  justify-content: center;
+  border-radius: 23px;
+  margin-top: 25px;
+  margin: auto;
+}
+.imgContainerPost{
+  width: 100%;
+  min-width: 500px;
+  max-width: 1000px;
+  min-height: 450px;
+  display: flex;
+  background-color: #115400;
+  align-items: center;
+  justify-content: center;
+  border-radius: 23px;
+  margin: auto;
+  margin-top: 25px;
+}
+
+.idivImgPost {
+  max-width:900px;
+  min-width: 75%;
+  max-height:475px;
+  min-height: 75%;
+}
+
+.profilePicture{
+  margin: 5px;
+  min-width: 50px;
+  min-height: 50px;
+  max-width: 50px;
+  max-height: 50px;
+  border-radius: 50%;
+}
+@media(max-width: 375px){
+  .App{
+    width: 375px;
+    height: 667px;
+  }
+  .post{
+    width: 375px;
+  }
+  .container{
+    width: 375px;
+    min-width: 375px;
+    padding: 0;
+  }
+  .informationContainer{
+    margin-bottom: 10px;
+    width: auto;
+  }
+  .descriptionContainer{
+    height: auto;
+    background-color: rgba(0, 0, 0, 0);
+    margin: 0;
+    margin-top: 10px;
+  }
+  .description{
+    width: auto;
+    color: white;
+    margin: auto;
+    margin-bottom: 5px;
+    padding: 0;
+    padding-top: 0;
+    font-family: 'Helvetica', sans-serif;
+    font-size: 15px;
+  }
+  .imgContainer{
+    margin: 0;
+    left: 12.5px;
+    min-width: 375px ;
+    width: 375px;
+  }
+  .imgPost{
+    width: 350px;
+    min-width: 300px;
+  }
+  .profileContainer{
+    width: 200px;
+    display: flex;
+  }
+  }
