--- a/src/Components/post.css
+++ b/src/Components/post.css
@@ -18,12 +18,17 @@
     bottom: 200px;
 }
 .newPostPic{
-    /*for new posts*/
+    width: 100%;
 }
 .editInput{
     height: 78px;
-    width: 700px;
+    width: 850px;
     resize: none;
+
+    position: relative;
+    top: -20px;
+    left: -5px;
+
     border: 2px solid rgb(0, 59, 0);
     border-radius: 10px;
     background-color: rgb(0, 98, 16);
