--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
 .container{
   height: auto;
   min-width: 889px;
+  min-height: 847px;
   width: 65%;
-  background-color: #187A00;
+  background-color: rgb(7, 47, 0);
   margin: 0 auto;
   padding: 5px;
 }
@@ -114,6 +115,7 @@ h3 {
   max-width: 50px;
   max-height: 50px;
   border-radius: 50%;
+  border-color: 1px solid white;
 }
 @media(max-width: 375px){
   .App{
