--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -2,7 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 92vh;
+    height: 564.5px;
+}
+.registerbox-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 564.5px;
 }
 .loginBox{
     position: absolute;
@@ -10,7 +16,14 @@
     flex-direction: column;
     align-items: center;
     width: 500px;
-    height: 200px;
+    background-color: #492300;
+}
+.registerbox{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
     background-color: #492300;
 }
 .title{
@@ -31,6 +44,19 @@
     border: none;
     margin-bottom: 10px;
 }
+.confirm-password-input{
+    border: none;
+    margin-bottom: 10px;
+}
+.confirm-password-input-invalid{
+    border: solid red 2px;
+    color: red;
+    margin-bottom: 10px;
+}
+.confirm-password-input-empty{
+    border: none;
+    margin-bottom: 10px;
+}
 .login-button{
     height: 30px;
     width: 80px;
@@ -44,7 +70,35 @@
     border: none;
     background-color: #FF9900;
 }
+.login-invalid{
+    color: red;
+    margin-bottom: 10px;
+}
+#register-button{
+    height: 30px;
+    width: 80px;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    color: black;
+
+    border: none;
+    background-color: #FF9900;
+}
+
 
 .login-button:hover{
     background-color: #ffac2f;
+}
+
+.loginLink{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.registerLink{
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
