--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -8,30 +8,35 @@
     position: sticky; top: 0px;
     z-index: 1;
     align-items: center;
+    justify-content: space-between;
   }
 .logo-button{
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left:50px;
+  width: 300px;
+  background-color: #FF9900;
 }
 .logo{
-  height: 50px;
-  margin-left: 100px;
-  background-color: #FFD600;
+  height: 40px;
   border-radius: 50%;
+  margin-left:10px
 }
 .monkidex{
   width: 340px;
   height: 50px;
   margin: 0;
-  margin-left: 10px;
   
   display: flex;
   align-items: center;
+  justify-content: center;
   
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 36px;
   letter-spacing: 0.20em;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  color: #FFD600;
+  color: #000000;
   
   
   }
