--- a/src/Components/Yourdex/yourdex.css
+++ b/src/Components/Yourdex/yourdex.css
@@ -1,7 +1,14 @@
+.topContainer{
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: stretch;
+}
+
 .container{
-  margin: auto;
   width:75%;
-  background-color: #311800;
+  background-color: #683200;
+
 }
 
 
@@ -12,7 +19,7 @@
 .create:hover{
   cursor: pointer;
   
-  background-color:#ffb23e;
+  background-color:#cf7c00;
   bottom: 21px;
 }
 
@@ -46,12 +53,12 @@
   justify-content: center;
   width: 100%;
   height: 200px;
+  position: relative;
 }
 .banner{
-  display: block;
-  max-width: 100%;
+  object-fit: cover;
+  width: 100%;
   max-height:200px;
-  width: auto;
   height: auto;
 }
 .profileInfoContainer{
@@ -62,6 +69,9 @@
   margin-left: 20px;
 }
 .profile{
+  width: 116px;
+  height: 116px;
+  object-fit: cover;
   background-color: white;
   border-radius: 50%;
   margin-right: 25px;
@@ -90,18 +100,24 @@
   justify-content: center;
 }
 .editPfpButton{
-  height: 25px;
-  
-  background-color: #FF9900;
-  border: none;
-  font-size: 20px;
+  z-index: .5;
+  bottom: 10px;
+  right: 10px;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+
+  border-radius: 26%;
+
+  background: url('https://monkidex-bucket.s3.amazonaws.com/24cafa39-d4ba-43e5-a91b-2a63c0828498-PngItem_248275.png');
+  background-color: rgb(149, 149, 149);
+  background-size:25px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .editPfpButton:hover{
-  background-color: #ffb23e;
-}
-
-.editPfpButton:active{
-  background-color: #FF9900;
+  cursor: pointer;
 }
 
 .editProfilePictureContainer{
@@ -136,32 +152,116 @@
 }
 
 
-.new-post-container{
-  display: flex;
-  flex-direction: column;
-  background-color: #683200;
-  align-items: center;
-}
 
-.monkey-creation{
+
+
+
+.new-post-container{
 
 }
 
 .new-post-information-container{
-
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .new-post-img-preview{
-
+  max-height: 100px;
 }
 
-.new-post-file-drop{
-
+.new-post-file-drop-and-description{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .new-post-description{
+  width: 600px;
+  height: 50px;
+  margin-bottom: 10px;
+  resize: none;
+  border: none;
 
 }
-.new-post-submit{
 
+.new-post-submit{
+  border: none;
+  width: 50px;
+  height: 25px;
+  margin-left: 10px;
+  background-color: #FF9900;
+}
+
+
+
+
+
+.pfpEditContainer{
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pfpEdit{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  position: sticky;
+
+  background-color: rgb(255,153,0);
+  box-shadow:2px 2px 9px black;
+
+  padding: 30px;
+  width: 500px;
+  height: 400px;
+
+  border-radius: 1%;
+}
+.profilePictureContainer{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.profileBannerContainer{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.titles{
+  color: black;
+  margin: 0;
+}
+
+.pfpPreview{
+  max-height: 150px;
+  max-width: 150px;
+}
+
+.bannerPreview{
+  max-height: 150px;
+  max-width: 150px;
+}
+
+.finalizationButtonContainer{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+}
+
+#validationButtons{
+  border: none;
+  border-radius: 0;
+  height: 30px;
+  width: 80px;
 }
