completely changed the color scheme to better fit the users experience

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
-  background-color: #115400;
-  background-image: url('./pattern_herringbone-7_2_2_0-0_0_1__105200_00000059.png');
+
+  background-color: #1E1E1E;
+  background-image: url('./pattern_hexagon-5_0.5_3_0-0_0_1__1f1f1f_ffe600.png');
   min-height: 100vh;
   min-width: 375px;
 }
+
