--- a/src/Components/Dashboard/dashboard.css
+++ b/src/Components/Dashboard/dashboard.css
@@ -3,29 +3,23 @@
     min-width: 889px;
     min-height: 847px;
     width: 65%;
-    background-color: rgb(7, 47, 0);
     margin: 0 auto;
 }
 .post-container{
   display: flex;
-  border-bottom: #115400 solid 1px;
 }
 
 .post-container:hover{
-    background-color: #582b00;
+  background-color: #3d3d3d;
 }
 .post:hover{
-  background-color: #462200;
+  background-color: #444444;
 
 }
 
 .informationContainer{
     display: flex;
     width: 100%;
-}
-
-.items{
-
 }
 
 .imgContainer{
@@ -43,6 +37,7 @@
 }
 
 .imgPost {
+    object-fit: contain;
     max-width:600px;
     min-width:600px;
     max-height:400px;
@@ -50,6 +45,7 @@
 }
 
 .profileContainer{
+    padding-left: 10px;
     display: flex;
     flex-direction: column;
 }
@@ -75,14 +71,13 @@ h3 { /* username of poster */
 }
 
 .profilePicture{
-    background-color: white;
     margin: 5px;
     min-width: 50px;
     min-height: 50px;
     max-width: 50px;
     max-height: 50px;
     border-radius: 50%;
-    border-color: 1px solid white;
+    border: 1px solid #ffe600;
 }
 a{
   text-decoration: none;
