--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,6 +1,7 @@
 .navbar{
     text-align: center;
-    background-color: #311800;
+    background-color: #ffe600;
+    background-color: #141414;
     height: 60px;
     min-width: 899px;
     margin: 0;
@@ -16,12 +17,11 @@
   align-items: center;
   margin-left:50px;
   width: 300px;
-  background-color: #FF9900;
+  background-color: #ffe600;
 }
 .logo{
   height: 40px;
-  border-radius: 50%;
-  margin-left:10px
+  margin-left:10px;
 }
 .monkidex{
   width: 340px;
@@ -36,7 +36,7 @@
   font-size: 36px;
   letter-spacing: 0.20em;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  color: #000000;
+  color: black;
   
   
   }
@@ -63,7 +63,7 @@
     justify-content: center;
     align-items: center;
     
-    background: #FF9900;
+    background: #ffe600;
     
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
@@ -73,11 +73,11 @@
   }
 
   .button:hover{
-    background-color: #ffb23e;
+    background-color: #ffec41;
   }
   
   .button:active{
-    background-color: #FF9900;
+    background-color: #e9d200;
   }
 
 
