--- a/src/Components/Post/post.css
+++ b/src/Components/Post/post.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     width: 75%;
-    background-color: #683200;
+    background-color: #333333;
 }
 
 .individual-post-container{
@@ -16,7 +16,6 @@
     width: 800px;
     margin: auto;
     margin-bottom: 20px;
-    padding-left: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -44,7 +43,11 @@
 }
 
 .post-img{
-    width: 800px;
+    object-fit: contain;
+    max-width: 800px;
+    min-width: 700px;
+    max-height: 400px;
+    min-height: 300px;
 }
 
 
@@ -59,8 +62,9 @@
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
-    background-color:#4b2400;
     padding-left: 5px;
+    border: 2px solid #ffe600;
+    background-color: #202020;
 }
 
 .button-list{
