fixed bug where you can sign in without entering any credentials, also added a loding banana gif and icons for like and comment features

--- a/src/Components/Yourdex/yourdex.css
+++ b/src/Components/Yourdex/yourdex.css
@@ -254,8 +254,17 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   margin-top: 10px;
+  min-height: 40.6vh;
 }
 
+.no-posts{
+  display: flex;
+  min-height: 40.6vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
 .user-posts{
   display: flex;
 }
