--- a/src/Components/Dashboard/dashboard.css
+++ b/src/Components/Dashboard/dashboard.css
@@ -8,6 +8,11 @@
 .post-container{
   display: flex;
 }
+.loading-banana{
+  object-fit: contain;
+  width: 100%;
+  height: 90vh;
+}
 
 .post-container:hover{
   background-color: #3d3d3d;
@@ -56,13 +61,24 @@
 }
 
 .interaction-buttons-container{
-
 }
 .like-button{
-
+  background-image: url('http://cdn.onlinewebfonts.com/svg/img_56552.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  width: 30px;
+  height: 30px;
 }
 .comment-button{
-
+  background-image: url('https://cdn-icons-png.flaticon.com/512/25/25663.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  width: 30px;
+  height: 30px;
 }
 
 h3 { /* username of poster */
