--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -16,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     width: 500px;
-    background-color: #492300;
+    background-color: #333333;
 }
 .registerbox{
     position: absolute;
@@ -24,7 +24,7 @@
     flex-direction: column;
     align-items: center;
     width: 500px;
-    background-color: #492300;
+    background-color: #333333;
 }
 .title{
     color: white;
@@ -68,7 +68,7 @@
     color: black;
 
     border: none;
-    background-color: #FF9900;
+    background-color: #FFE600;
 }
 .login-invalid{
     color: red;
@@ -85,12 +85,15 @@
     color: black;
 
     border: none;
-    background-color: #FF9900;
+    background-color: #FFE600;
 }
 
 
 .login-button:hover{
-    background-color: #ffac2f;
+    background-color: #dbc500;
+}
+#register-button:hover{
+    background-color: #dbc500;
 }
 
 .loginLink{
