--- a/src/Components/Yourdex/yourdex.css
+++ b/src/Components/Yourdex/yourdex.css
@@ -15,7 +15,7 @@
 .create:hover{
   cursor: pointer;
   
-  background-color:#cf7c00;
+  background-color:#ffed4b;
   bottom: 21px;
 }
 
@@ -72,7 +72,7 @@
   height: 25px;
   margin-left: 10px;
   
-  background-color: #FF9900;
+  background-color: #FFE600;
   font-size: 40px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
   
@@ -199,7 +199,7 @@
 
   position: sticky;
 
-  background-color: rgb(255,153,0);
+  background-color: #ffe600;
   box-shadow:2px 2px 9px black;
 
   padding: 30px;
