--- a/src/Components/Comments/comments.css
+++ b/src/Components/Comments/comments.css
@@ -7,9 +7,12 @@
 }
 
 .comment-container{
+    display: flex;
     margin: 5px;
     background-color: rgba(255, 255, 255, 0.171);
     padding: 10px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .comment-author-info{
@@ -28,6 +31,7 @@
 
 .comment-body{
     font-size: small;
+    margin-left: 40px;
 }
 
 
