--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,7 @@
   background-image: url('./pattern_hexagon-5_0.5_3_0-0_0_1__1f1f1f_ffe600.png');
   min-height: 100vh;
   min-width: 375px;
+
+  zoom: 150%;
 }
 
